# learn-anything

./: .env.example  .gitattributes  .gitignore  .oxlintrc.json  AGENTS.md  README.md  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  turbo.json  wrangler.jsonc
apps/demo/: package.json  tsconfig.json  vite.config.ts
apps/web/: .env.example  package.json  tsconfig.json  vite.config.ts
content-schemas/v1/: learning-path.schema.json  lesson-interaction-link.schema.json  lesson.schema.json  media-asset.schema.json  quiz-question-link.schema.json  quiz-question.schema.json  quiz.schema.json  release.schema.json  skill.schema.json  subject-area.schema.json  topic-area.schema.json  topic-discovery-metadata.schema.json  topic-module.schema.json
plans/: README.md  auth.md  content-architecture.md  content-generation.md  local-development.md  release-operations.md  ui-ux-v1.md  v2-roadmap.md  v3-roadmap.md  v4-roadmap.md
supabase/: config.toml
supabase/migrations/: 20260522022846_create_initial_content_schema.sql  20260522074224_v2_platform_contracts.sql  20260522102540_engagement_xp_summary_rpc.sql  20260522103229_resolve_v2_rpc_variable_conflicts.sql  20260522120000_v3_milestone_1a_enrollments.sql  20260522130000_v3_milestone_3_mastery_sr_recommendations.sql  20260522133000_v3_milestone_3_runtime_contracts.sql  20260522134500_v3_milestone_3_atomic_outcomes.sql  20260522140000_v3_milestone_4_rich_practice.sql  (+26 more)
supabase/seeds/: README.md  (+1 more)
tools/: check-sveltekit-install.mjs
tools/birefnet-bg-remove/: README.md  pyproject.toml  remove_background.py
(+247 files in other folders)
