[project]
name = "learn-anything-birefnet-bg-remove"
version = "0.0.0"
description = "Dev-only local BiRefNet background removal preprocessing utility."
requires-python = ">=3.11,<3.14"
dependencies = [
	"torch>=2.7.0",
	"torchvision>=0.22.0",
	"transformers>=4.57.0",
	"huggingface-hub>=0.36.0",
	"safetensors>=0.6.0",
	"pillow>=11.0.0",
	"timm>=1.0.0",
	"einops>=0.8.0",
	"kornia>=0.8.0",
]

[tool.uv]
package = false
